--- a/registro/profesional-registro.html
+++ b/registro/profesional-registro.html
@@ -10,7 +10,8 @@
 <body>
 
     <main id="profesional-registro">
-      <div id="header-row">
+    
+    <div id="header-row">
         <h1 id="title">1. Crea tu cuenta</h1>
         <p id="back">Atrás</p>
     </div>
@@ -59,7 +60,6 @@
             <label for="contra2">Repita su contraseña</label>
         </div>
         <input type="submit" id="continuar" value="Continuar" class="next">
-
     </form>
 
     <div id="perfiles">
@@ -217,6 +217,50 @@
         <p>Alquilo locaciones</p>
       </div>
     </div>
+
+    <form id="personalizar">
+      <div id="upload">
+        <div id="svg-wrp">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 31.44">
+          <g id="Grupo_233" data-name="Grupo 233" transform="translate(-134.965 -602)">
+            <path id="Trazado_343" data-name="Trazado 343" d="M155.012,633.44h-17a2.861,2.861,0,0,1-2.807-1.758,3.345,3.345,0,0,1-.234-1.442q0-10.131,0-20.263c0-.729-.008-1.458.005-2.187a2.837,2.837,0,0,1,2.912-2.912q1.093-.021,2.187,0a.568.568,0,0,0,.663-.49A3.1,3.1,0,0,1,143.88,602c1.723.063,3.451.007,5.177.017a2.936,2.936,0,0,1,2.972,2.339.571.571,0,0,0,.643.516q6.561-.011,13.122,0c.522,0,.593-.077.6-.6.006-.58.01-1.161,0-1.741,0-.355.152-.518.51-.513.595.008,1.19.011,1.785,0,.4-.009.573.155.564.556-.013.565.013,1.131-.006,1.7-.014.435.154.624.6.612.7-.02,1.4-.006,2.1,0a2.879,2.879,0,0,1,3.016,3q.009,7.186,0,14.371,0,4.062,0,8.123a2.9,2.9,0,0,1-3.079,3.072Zm3.5-24.917a10.892,10.892,0,1,0,10.915,10.686A10.9,10.9,0,0,0,158.514,608.522Zm-16.7,5.986a2.079,2.079,0,1,0-2.086-2.11A2.1,2.1,0,0,0,141.811,614.508Z" transform="translate(0)" fill="#EF1141"/>
+            <path id="Trazado_344" data-name="Trazado 344" d="M189.385,634.27a7.113,7.113,0,0,1-7.225,7.1A7.182,7.182,0,0,1,182.145,627,7.069,7.069,0,0,1,189.385,634.27Z" transform="translate(-23.707 -14.793)" fill="#EF1141"/>
+          </g>
+        </svg>   
+        <input type="file" accept="image/png, image/jpeg" id="upload-img">
+        </div>
+      </div>
+      <div id="presentacion">
+        <h2>Presentación <span>(200 caractéres max.)</span></h2>
+        <textarea name="presentacion" maxlength="200" placeholder="Escribe aqui..."></textarea>
+      </div>
+      <div id="redes">
+        <h2>Redes</h2>
+        <a class="red">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.23 19.234">
+            <path id="Trazado_41" data-name="Trazado 41" d="M189.1,238.451c0,2.685,0,5.369,0,8.054,0,1.217-.343,1.55-1.573,1.556s-2.43-.01-3.646,0c-.571.006-.811-.231-.806-.811q.024-2.967,0-5.934c-.006-.6.263-.808.82-.787,2.085.078,1.536-.03,1.887-1.922.091-.49-.1-.766-.628-.75a1.69,1.69,0,0,1-.254-.005c-.574-.072-1.382.282-1.673-.251a3.461,3.461,0,0,1-.05-2.4c.155-.658.77-.731,1.358-.785.458-.042,1.082.247,1.336-.235a3.558,3.558,0,0,0,.079-1.836.394.394,0,0,0-.391-.376c-.168-.02-.338-.028-.507-.035-3.641-.16-4.76.9-4.769,4.54,0,1.37,0,1.356-1.355,1.389-.39.009-.993-.214-1.094.339a2.939,2.939,0,0,0,.149,2.144c.228.362.737.175,1.12.183,1.171.023,1.176.017,1.18,1.192.007,1.78-.013,3.561.03,5.341.017.724-.218,1.014-.965,1.006-2.628-.027-5.256,0-7.885-.013-1.15,0-1.563-.421-1.57-1.614-.018-3.024-.013-6.048-.015-9.071,0-2.261-.007-4.522,0-6.782.006-1.365.4-1.749,1.783-1.75q7.842,0,15.684,0c1.445,0,1.753.306,1.754,1.732Q189.1,234.509,189.1,238.451Z" transform="translate(-169.87 -228.833)" fill="#fff"/>
+          </svg>
+          <p>Vincular con Facebook</p>
+        </a>
+        <a class="red">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.54 19.535">
+            <g id="Grupo_32" data-name="Grupo 32" transform="translate(-4346.553 689.378)">
+              <path id="Trazado_38" data-name="Trazado 38" class="cls-1" d="M4356.323-669.843h-4.444a5.363,5.363,0,0,1-4.931-3.344,5.378,5.378,0,0,1-.394-2.035c0-2.916-.008-5.832.005-8.748a5.236,5.236,0,0,1,2.666-4.679,4.933,4.933,0,0,1,2.626-.728q4.471,0,8.944,0a5.37,5.37,0,0,1,4.9,3.33,5.5,5.5,0,0,1,.4,2.077c-.006,2.907.007,5.813-.005,8.72a5.236,5.236,0,0,1-2.642,4.665,4.966,4.966,0,0,1-2.665.742Q4358.552-669.841,4356.323-669.843Zm0-1.5c1.444,0,2.888-.006,4.331,0a3.758,3.758,0,0,0,2.15-.612,3.658,3.658,0,0,0,1.777-3.118c.031-3.027.012-6.055.008-9.083a3.407,3.407,0,0,0-.51-1.784,3.792,3.792,0,0,0-3.424-1.943c-2.888,0-5.775,0-8.663,0a3.781,3.781,0,0,0-2.15.612,3.659,3.659,0,0,0-1.777,3.118c-.031,3.027-.012,6.055-.008,9.083a3.4,3.4,0,0,0,.5,1.772,3.8,3.8,0,0,0,3.417,1.955C4353.426-671.336,4354.875-671.34,4356.323-671.34Z" fill="#fff"/>
+              <path id="Trazado_39" data-name="Trazado 39" class="cls-1" d="M4508.752-522.034a5.23,5.23,0,0,1,5.237-5.214,5.23,5.23,0,0,1,5.207,5.23,5.23,5.23,0,0,1-5.237,5.214A5.23,5.23,0,0,1,4508.752-522.034Zm5.211,3.73a3.728,3.728,0,0,0,3.733-3.707,3.728,3.728,0,0,0-3.7-3.736,3.727,3.727,0,0,0-3.74,3.714A3.727,3.727,0,0,0,4513.963-518.3Z" transform="translate(-157.651 -157.584)" fill="#fff"/>
+              <path id="Trazado_40" data-name="Trazado 40" class="cls-1" d="M4851.9-570.547a1.016,1.016,0,0,1,1.029,1.031,1.042,1.042,0,0,1-1.034,1.035,1.051,1.051,0,0,1-1.035-1.039A1.034,1.034,0,0,1,4851.9-570.547Z" transform="translate(-490.167 -115.499)" fill="#fff"/>
+            </g>
+          </svg>
+          <p>Vincular con Instagram</p>
+        </a>
+        <a class="red">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.768 19.397">
+            <path id="Trazado_42" data-name="Trazado 42" class="cls-1" d="M80.334,619.182a3.418,3.418,0,0,1,.648.025,9.8,9.8,0,0,0,6.327-1.9c.03-.022.057-.049.1-.089a1.44,1.44,0,0,0-.544-.1,4.865,4.865,0,0,1-3.8-3.1c-.105-.254-.088-.277.19-.237a4.885,4.885,0,0,0,1.816-.1,4.919,4.919,0,0,1-3.781-4.346c-.009-.1-.022-.2-.031-.3-.017-.183.053-.225.215-.139a4.4,4.4,0,0,0,1.317.44c.174.031.351.049.544.076-.013-.105-.1-.127-.148-.17a4.833,4.833,0,0,1-1.853-3.437,4.745,4.745,0,0,1,.505-2.63c.147-.291.151-.294.359-.049a13.724,13.724,0,0,0,3.519,2.969,13.48,13.48,0,0,0,5.168,1.789c.284.037.569.069.854.088.247.016.279-.025.239-.259a4.637,4.637,0,0,1,.408-2.9,4.91,4.91,0,0,1,7.846-1.419.361.361,0,0,0,.372.1,9.9,9.9,0,0,0,2.66-1.017.293.293,0,0,1,.23-.066,4.949,4.949,0,0,1-2.024,2.625,9.873,9.873,0,0,0,2.609-.72c.055.1-.012.142-.044.187a9.246,9.246,0,0,1-2.027,2.129.636.636,0,0,0-.277.583,14.054,14.054,0,0,1-3.118,9.092,12.962,12.962,0,0,1-8.522,4.924,13.988,13.988,0,0,1-8.91-1.518,9.506,9.506,0,0,0-.849-.478Z" transform="translate(-80.334 -602)" fill="#fff"/>
+          </svg>
+          <p>Vincular con Twitter</p>
+        </a>
+      </div>
+      <input type="submit" id="finalizar" value="Finalizar" class="next">
+    </form>
 
     </main>
  
