--- a/home.html
+++ b/home.html
@@ -31,71 +31,105 @@
     </div>
 
     <main id="home">
-        <div class="publicacion">
-            <div class="publicacion-header">
-                <div class="name">
-                <img src="img/profile-icon-47.png" alt="">
-                <p>47 Street</p>
+        <div id="publicaciones">
+            <div class="publicacion">
+                <div class="publicacion-header">
+                    <div class="name">
+                    <img src="img/profile-icon-47.png" alt="">
+                    <p>47 Street</p>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" id="save" viewBox="0 0 21 26.244">
+                        <path id="Trazado_346" data-name="Trazado 346" class="cls-1" d="M6,5.667A1.667,1.667,0,0,1,7.667,4H24.333A1.667,1.667,0,0,1,26,5.667V27.552a1.667,1.667,0,0,1-2.591,1.387l-6.484-4.323a1.667,1.667,0,0,0-1.849,0L8.591,28.939A1.667,1.667,0,0,1,6,27.552Z" transform="translate(-5.5 -3.5)"/>
+                    </svg>   
                 </div>
-                <svg xmlns="http://www.w3.org/2000/svg" id="save" viewBox="0 0 21 26.244">
-                    <path id="Trazado_346" data-name="Trazado 346" class="cls-1" d="M6,5.667A1.667,1.667,0,0,1,7.667,4H24.333A1.667,1.667,0,0,1,26,5.667V27.552a1.667,1.667,0,0,1-2.591,1.387l-6.484-4.323a1.667,1.667,0,0,0-1.849,0L8.591,28.939A1.667,1.667,0,0,1,6,27.552Z" transform="translate(-5.5 -3.5)"/>
-                </svg>   
+                <div class="publicacion-img">
+                <img src="img/img-publicacion-1.png" alt="">
+                </div>
+                <div class="publicacion-text">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p class="text">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo...</p>
+                    <a href="#" class="postularme">Postularme</a>
+                    <p class="time">Hace 13 horas</p>
+                </div>
             </div>
-            <div class="publicacion-img">
-            <img src="img/img-publicacion-1.png" alt="">
-            </div>
-            <div class="publicacion-text">
-                <h2>Lorem ipsum dolor sit amet</h2>
-                <p class="text">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo...</p>
-                <a href="#" class="postularme">Postularme</a>
-                <p class="time">Hace 13 horas</p>
+            <div class="publicacion">
+                <div class="publicacion-header">
+                    <div class="name">
+                    <img src="img/profile-icon-colourpop.png" alt="">
+                    <p>Colourpop</p>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" id="save" viewBox="0 0 21 26.244">
+                        <path id="Trazado_346" data-name="Trazado 346" class="cls-1" d="M6,5.667A1.667,1.667,0,0,1,7.667,4H24.333A1.667,1.667,0,0,1,26,5.667V27.552a1.667,1.667,0,0,1-2.591,1.387l-6.484-4.323a1.667,1.667,0,0,0-1.849,0L8.591,28.939A1.667,1.667,0,0,1,6,27.552Z" transform="translate(-5.5 -3.5)"/>
+                    </svg>   
+                </div>
+                <div class="publicacion-img">
+                <img src="img/img-publicacion-2.png" alt="">
+                </div>
+                <div class="publicacion-text">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p class="text">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo...</p>
+                    <a href="#" class="postularme">Postularme</a>
+                    <p class="time">Hace 13 horas</p>
+                </div>
             </div>
         </div>
-        <div class="publicacion">
-            <div class="publicacion-header">
-                <div class="name">
-                <img src="img/profile-icon-colourpop.png" alt="">
-                <p>Colourpop</p>
-                </div>
-                <svg xmlns="http://www.w3.org/2000/svg" id="save" viewBox="0 0 21 26.244">
-                    <path id="Trazado_346" data-name="Trazado 346" class="cls-1" d="M6,5.667A1.667,1.667,0,0,1,7.667,4H24.333A1.667,1.667,0,0,1,26,5.667V27.552a1.667,1.667,0,0,1-2.591,1.387l-6.484-4.323a1.667,1.667,0,0,0-1.849,0L8.591,28.939A1.667,1.667,0,0,1,6,27.552Z" transform="translate(-5.5 -3.5)"/>
-                </svg>   
+        <form id="search-form">
+            <div id="volver-wrp">
+                <a href="home.html" id="volver">Volver</a>
             </div>
-            <div class="publicacion-img">
-            <img src="img/img-publicacion-2.png" alt="">
-            </div>
-            <div class="publicacion-text">
-                <h2>Lorem ipsum dolor sit amet</h2>
-                <p class="text">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo...</p>
-                <a href="#" class="postularme">Postularme</a>
-                <p class="time">Hace 13 horas</p>
-            </div>
-        </div>
+            <label for="profesiones">Seleccione el profesional que busca</label>
+            <select id="profesiones" name="profesiones">
+                <option value="Modelo">Modelo</option>
+                <option value="Influencer">Influencer</option>
+                <option value="Fotógrafo/a">Fotógrafo/a</option>
+                <option value="Actor/actriz">Actor/actriz</option>
+                <option value="Camarógrafo/a">Camarógrafo/a</option>
+                <option value="Mauquillador/a">Mauquillador/a</option>
+                <option value="Productor/a">Productor/a</option>
+                <option value="Editor/a">Editor/a</option>
+                <option value="Alquiler de equipos">Alquiler de equipos</option>
+                <option value="Alquiler de locaciones">Alquiler de locaciones</option>
+            </select>
+            <label for="fecha">Seleccione la fecha</label>
+            <input type="date" id="fecha" name="fecha" min="2020-09-01" max="2021-09-30">
+            <label for="numero">Seleccione la cantidad de profesionales necesarios</label>
+            <input type="number" id="numero" name="numero" value="1">
+            <label for="remuneración">Seleccione el tipo de remuneración</label>
+            <select id="remuneración" name="remuneración">
+                <option value="Modelo">Monetaria</option>
+                <option value="Influencer">Canje</option>
+            </select>
+            <input type="submit" value="Buscar" id="buscar-btn">
+        </form>
     </main>
 
-    <nav>
-        <a href="#" id="chat">
+    <nav id="main-nav">
+        <a href="chat.html" id="chat">
+            <span></span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26.594 24.635">
                 <g id="message" data-name="Grupo 51" transform="translate(-1629.187 -344.624)">
                   <path id="Trazado_54" data-name="Trazado 54" d="M1663.915,344.627c2.593,0,5.186-.008,7.779,0a5.635,5.635,0,0,1,5.474,5.47c.022,2.58-.081,5.163.031,7.738a5.8,5.8,0,0,1-4.9,5.821c-.6.079-.751.316-.74.867.026,1.365.015,2.731.007,4.1,0,.213.106.508-.145.615s-.4-.157-.57-.293c-1.969-1.575-3.94-3.148-5.893-4.743a2.015,2.015,0,0,0-1.373-.49q-3.663.025-7.326-.01a5.639,5.639,0,0,1-5.628-5.64q-.034-3.793-.008-7.587a5.641,5.641,0,0,1,5.817-5.84c2.492-.012,4.985,0,7.477,0Zm5.593,20.767c0-.7,0-1.25,0-1.8-.006-1.9-.006-1.9,1.908-1.946a3.606,3.606,0,0,0,3.7-3.745q.031-3.716,0-7.433a3.53,3.53,0,0,0-3.8-3.77q-7.4-.013-14.8,0a3.594,3.594,0,0,0-3.838,3.833c-.016,2.377-.012,4.754,0,7.13a3.64,3.64,0,0,0,3.94,3.975c2.341.014,4.681.032,7.022,0a2.579,2.579,0,0,1,1.722.6C1666.684,363.284,1668.036,364.282,1669.507,365.394Z" transform="translate(-21.421 0)"/>
                 </g>
-              </svg>
+            </svg>
         </a>
-        <a href="#" id="busqueda">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.842 23.836">
+        <a href="home.html" id="busqueda">
+            <span class="current-bg"></span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.842 23.836" class="current">
                 <g id="lupa" data-name="Grupo 209" transform="translate(-374.553 -820.05)">
                   <path id="Trazado_306" data-name="Trazado 306" class="cls-1" d="M393.137,828.891a9.539,9.539,0,0,1-1.631,5.732c-.157.229-.129.346.057.531q3.187,3.17,6.359,6.355a1.414,1.414,0,0,1,.468.9,1.332,1.332,0,0,1-.764,1.348,1.312,1.312,0,0,1-1.522-.28q-1.559-1.55-3.11-3.109c-1.109-1.109-2.222-2.215-3.321-3.333a.326.326,0,0,0-.511-.039,9.168,9.168,0,0,1-5.951,1.662,9.308,9.308,0,0,1-.818-18.476,8.923,8.923,0,0,1,8.113,2.709A8.813,8.813,0,0,1,393.137,828.891Zm-9.273-7.106a7.586,7.586,0,1,0,7.559,7.626A7.565,7.565,0,0,0,383.864,821.784Z" transform="translate(0 0)"/>
                 </g>
-              </svg>
+            </svg>
         </a>
-        <a href="#" id="perfil">
+        <a href="profile.html" id="perfil">
+            <span></span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25.4 24.465">
                 <g id="profile" data-name="Grupo 52" transform="translate(-1437.975 -845.281)">
                   <path id="Trazado_56" data-name="Trazado 56" class="cls-1" d="M1450.68,869.745q-5.672,0-11.343,0c-1.1,0-1.424-.328-1.352-1.437a12.818,12.818,0,0,1,4.147-8.866c.538-.5,1.089-.537,1.473-.112.366.4.27.966-.258,1.457a10.877,10.877,0,0,0-3.449,6.525c-.084.559.09.631.577.63q9.829-.02,19.657-.01c1.455,0,1.5-.013,1.164-1.445a10.715,10.715,0,0,0-6.421-7.7.77.77,0,0,0-.768.1,7.286,7.286,0,1,1,2.257-1.916c-.295.376-.167.439.16.618a12.407,12.407,0,0,1,6.759,10.019c.036.32.087.639.092.96.012.83-.326,1.176-1.158,1.178q-4.093.009-8.185,0Zm-.01-22.691a5.485,5.485,0,0,0-5.444,5.529,5.43,5.43,0,0,0,5.462,5.378,5.454,5.454,0,1,0-.018-10.908Z"/>
                 </g>
-              </svg>
+            </svg>
         </a>
     </nav>
  
 </body>
+<script src="js/home.js"></script>
 </html>
