--- a/profile.html
+++ b/profile.html
@@ -21,11 +21,21 @@
 
     <nav id="profile-nav">
         <ul>
-            <li class="option">Editar perfil</li>
-            <li class="option">Postulados</li>
-            <li class="option">Guardados</li>
-            <li class="option">Configuración</li>
-            <li class="option">Cerrar sesión</li>
+            <li class="option">
+              <a href="profile-nav/editar-perfil.html">Editar perfil</a>
+            </li>
+            <li class="option">
+              <a href="profile-nav/postulados.html">Postulados</a>
+            </li>
+            <li class="option">
+              <a href="profile-nav/guardados.html">Guardados</a>
+            </li>
+            <li class="option">
+              <a href="">Configuración</a>
+            </li>
+            <li class="option">
+              <a href="index.html">Cerrar sesión</a>
+            </li>
         </ul>
     </nav>
 
