--- a/registro/registro.html
+++ b/registro/registro.html
@@ -152,7 +152,7 @@
         <p>Soy actor/actriz</p>
       </div>
       <div class="perfil">
-        <svg xmlns="http://www.w3.org/2000/svg" width="131" height="131" viewBox="0 0 131 131">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 131 131">
           <defs>
             <style>
               .red {
