--- a/profile.html
+++ b/profile.html
@@ -72,6 +72,14 @@
               <p>@camigimenez</p>
             </a>
         </div>
+        <div id="galeria-grid">
+          <img src="img/galeria-img.png" alt="">
+          <img src="img/img-publicacion-1.png" alt="">
+          <img src="img/img-publicacion-2.png" alt="">
+          <img src="img/img-publicacion-2.png" alt="">
+          <img src="img/galeria-img.png" alt="">
+          <img src="img/img-publicacion-1.png" alt="">
+        </div>
     </main>
 
     <nav id="main-nav">
