--- a/chat.html
+++ b/chat.html
@@ -9,15 +9,68 @@
 </head>
 <body>
 
-    <div id="chat-header">
-        <p id="individual-btn">Individual</p>
-        <p id="equipos-btn">Equipos</p>
-        <span id="underline"></span>
+    <div id="search-wrp">
+        <input type="search" placeholder="Buscar..." id="search">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.842 23.836">
+            <g data-name="Grupo 209" transform="translate(-374.553 -820.05)">
+            <path id="Trazado_306" data-name="Trazado 306" class="cls-1" d="M393.137,828.891a9.539,9.539,0,0,1-1.631,5.732c-.157.229-.129.346.057.531q3.187,3.17,6.359,6.355a1.414,1.414,0,0,1,.468.9,1.332,1.332,0,0,1-.764,1.348,1.312,1.312,0,0,1-1.522-.28q-1.559-1.55-3.11-3.109c-1.109-1.109-2.222-2.215-3.321-3.333a.326.326,0,0,0-.511-.039,9.168,9.168,0,0,1-5.951,1.662,9.308,9.308,0,0,1-.818-18.476,8.923,8.923,0,0,1,8.113,2.709A8.813,8.813,0,0,1,393.137,828.891Zm-9.273-7.106a7.586,7.586,0,1,0,7.559,7.626A7.565,7.565,0,0,0,383.864,821.784Z" transform="translate(0 0)"/>
+            </g>
+        </svg>
+    </div>
+
+    <div id="chat-contacts">
+        <div class="contact">
+            <div class="contact-pic">
+                <img src="img/profile-pic2.png" alt="">
+                <span class="online"></span>
+            </div>
+            <p>Rocio Martinez</p>
+        </div>
+        <div class="contact">
+            <div class="contact-pic">
+                <img src="img/profile-pic.png" alt="">
+                <span class="online"></span>
+            </div>
+            <p>Gala Suarez</p>
+        </div>
+        <div class="contact">
+            <div class="contact-pic">
+                <img src="img/profile-pic3.png" alt="">
+                <span class="offline"></span>
+            </div>
+            <p>Noelia Petri</p>
+        </div>
+        <div class="contact">
+            <div class="contact-pic">
+                <img src="img/profile-pic4.png" alt="">
+                <span class="offline"></span>
+            </div>
+            <p>Roco Melanova</p>
+        </div>
+        <div class="contact">
+            <div class="contact-pic">
+                <img src="img/profile-pic5.png" alt="">
+                <span class="online"></span>
+            </div>
+            <p>Mila Conti</p>
+        </div>
+        <div class="contact">
+            <div class="contact-pic">
+                <img src="img/profile-pic2.png" alt="">
+                <span class="offline"></span>
+            </div>
+            <p>Rocio Martinez</p>
+        </div>
+        <div class="contact">
+            <div class="contact-pic">
+                <img src="img/profile-pic.png" alt="">
+                <span class="offline"></span>
+            </div>
+            <p>Gala Suarez</p>
+        </div>
     </div>
 
     <main id="chat-main">
-        <div id="individual">
-            <h1>Hoy</h1>
             <a href="chat-convo" class="chat-preview">
                 <img src="img/profile-icon-47.png" alt="">
                 <div class="content">
@@ -33,26 +86,6 @@
                     </div>
                 </div>
             </a>
-            <h1>Ayer</h1>
-            <a href="chat-convo" class="chat-preview">
-                <img src="img/profile-icon-colourpop.png" alt="">
-                <div class="content">
-                    <p class="name">Colourpop</p>
-                    <p class="preview">Ut wisi enim ad minim veniam, quis nostrud exerci tation...</p>
-                    <div class="data">
-                        <div class="msj-pop">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.081 25.78">
-                                <path id="Trazado_320" data-name="Trazado 320" class="cls-1" d="M425.259,1676.668q-10.236-.044-20.472-.049a4.96,4.96,0,0,0-5.322,5.266q-.045,4.909-.026,9.818c.007,3.439,2.01,5.459,5.437,5.487,3.238.027,6.476.06,9.714.027a3.578,3.578,0,0,1,2.379.835c1.825,1.432,3.691,2.81,5.723,4.347,0-.968.006-1.721.006-2.474,0-2.611,0-2.611,2.646-2.672a4.976,4.976,0,0,0,5.138-5.145q.056-5.117.027-10.235A4.873,4.873,0,0,0,425.259,1676.668Z" transform="translate(-399.435 -1676.619)"/>
-                            </svg> 
-                            <p>1</p>
-                        </div>
-                        <p class="time">Hace 1 dia</p>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div id="equipos">
-            <h1>Hoy</h1>
             <a href="chat-convo" class="chat-preview">
                 <img src="img/group-icon.png" alt="">
                 <div class="content">
@@ -70,7 +103,22 @@
                     </div>
                 </div>
             </a>
-        </div>
+            <a href="chat-convo" class="chat-preview">
+                <img src="img/profile-icon-colourpop.png" alt="">
+                <div class="content">
+                    <p class="name">Colourpop</p>
+                    <p class="preview">Ut wisi enim ad minim veniam, quis nostrud exerci tation...</p>
+                    <div class="data">
+                        <div class="msj-pop">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.081 25.78">
+                                <path id="Trazado_320" data-name="Trazado 320" class="cls-1" d="M425.259,1676.668q-10.236-.044-20.472-.049a4.96,4.96,0,0,0-5.322,5.266q-.045,4.909-.026,9.818c.007,3.439,2.01,5.459,5.437,5.487,3.238.027,6.476.06,9.714.027a3.578,3.578,0,0,1,2.379.835c1.825,1.432,3.691,2.81,5.723,4.347,0-.968.006-1.721.006-2.474,0-2.611,0-2.611,2.646-2.672a4.976,4.976,0,0,0,5.138-5.145q.056-5.117.027-10.235A4.873,4.873,0,0,0,425.259,1676.668Z" transform="translate(-399.435 -1676.619)"/>
+                            </svg> 
+                            <p>1</p>
+                        </div>
+                        <p class="time">Hace 1 dia</p>
+                    </div>
+                </div>
+            </a>
     </main>
 
     <nav id="main-nav">
@@ -101,5 +149,4 @@
     </nav>
  
 </body>
-<script src="js/chat.js"></script>
 </html>
