--- a/home.html
+++ b/home.html
@@ -48,6 +48,8 @@
       </div>
     </header>
 
+    <main>
+
     <div id="filters">
       <div class="filter-profesion canje current">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 55 55">
@@ -118,7 +120,7 @@
         <div class="profesion-wrp" id="profesion-ofrezco">
           <p>Profesión</p>
         <label class="container">Influencer
-            <input type="checkbox" class="check">
+            <input type="checkbox" class="check" checked>
             <span class="checkmark"></span>
         </label>
         <label class="container">Modelo
@@ -193,8 +195,8 @@
       <div class="form-content">
         <div class="profesion-wrp" id="tipo-modelo">
           <p>Tipo de modelo</p>
-        <label class="container">Desfile
-            <input type="radio" name="busco" class="check">
+        <label class="container">Pasarela
+            <input type="radio" name="busco" class="check" checked>
             <span class="checkmark"></span>
         </label>
         <label class="container">Amateur
@@ -251,7 +253,7 @@
         <div class="profesion-wrp" id="profesion-ofrezco">
           <p>Plataforma</p>
         <label class="container">Instagram
-            <input type="checkbox" class="check">
+            <input type="checkbox" class="check" checked>
             <span class="checkmark"></span>
         </label>
         <label class="container">TikTok
@@ -308,7 +310,7 @@
         <div class="profesion-wrp" id="profesion-ofrezco">
           <p>Tipo de equipo</p>
         <label class="container">Iluminación
-            <input type="checkbox" class="check">
+            <input type="checkbox" class="check" checked>
             <span class="checkmark"></span>
         </label>
         <label class="container">Cámara
@@ -347,6 +349,8 @@
     </form>
 
     </div>
+
+    </main>
 
 </body>
 <script src="js/home.js"></script>
