--- a/home.html
+++ b/home.html
@@ -344,6 +344,20 @@
             <input type="date" class="fecha-franja" name="fecha" min="2020-09-01" max="2021-09-30" value="2020-09-01">
           </div>
         </div>
+        <div id="publicar-info">
+          <label for="price">Imagen</label>
+          <input type="file" accept="image/png, image/jpeg" name="price">
+          <label for="time">Tiempo de alquiler</label>
+          <div class="time-input">
+            <input type="number" name="time">
+            <p>hs</p>
+          </div>
+          <label for="price">Precio</label>
+          <div class="price-input">
+            <p>$</p>
+            <input type="number" name="price">
+          </div>
+        </div>
         <input type="submit" value="Buscar alquileres" id="submit-alquiler" class="submit">
       </div>
     </form>
